[package]
name = "fusionauth_jwt_rs"
version = "0.1.0"
edition = "2024"
description = "WASI-compatible FusionAuth JWT verification (JWKS / RS256) for wasmCloud components"
license = "MIT"
repository = "https://github.com/bettyblocks/fusionauth_jwt_rs"
keywords = ["jwt", "fusionauth", "wasi", "wasmcloud", "jwks"]
categories = ["authentication", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
# RS256/384/512 verification + claim validation. The `rust_crypto` backend is
# pure Rust (no `ring`/`aws-lc-rs`/C), so it builds and runs on `wasm32-wasip2`;
# `default-features = false` drops the PEM/`aws-lc-rs` machinery we don't use.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Enable the self-contained `Verifier::verify_token` JWKS fetch on native
# (non-wasm) targets, via a blocking `ureq` client. Off by default so the pure
# `verify_with_jwks` path stays dependency-light. The wasm targets always have
# their own fetch backend and don't need this feature.
native-http = ["dep:ureq"]

# Native HTTP client for the `native-http` feature (non-wasm only).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3", optional = true }

# wasip2: JWKS fetch over `wasi:http` 0.2.
[target.'cfg(all(target_arch = "wasm32", target_env = "p2"))'.dependencies]
wasi = "0.14"

# wasip3: JWKS fetch over `wasi:http` 0.3. `wasi-fetch` is the async client;
# `wasip3` provides the `block_on` runtime bridge.
[target.'cfg(all(target_arch = "wasm32", target_env = "p3"))'.dependencies]
wasi-fetch = "0.2"
wasip3 = "0.7"

[dev-dependencies]
# The test harness signs sample tokens itself, so it needs raw RSA + SHA-2 and
# base64. These are test-only; the library verifies via `jsonwebtoken`.
rsa = { version = "0.9", features = ["pem"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
