[package]
name = "fusionauth_jwt_rs"
version = "0.2.1"
edition = "2024"
description = "WASI-compatible FusionAuth JWT verification (JWKS / RS256) for wasmCloud components"
license = "MIT"
repository = "https://github.com/bettyblocks/fusionauth_jwt_rs"
keywords = ["jwt", "fusionauth", "wasi", "wasmcloud", "jwks"]
categories = ["authentication", "wasm"]

[lib]
crate-type = ["rlib"]

[dependencies]
# RS256/384/512 verification + claim validation. The `rust_crypto` backend is
# pure Rust (no `ring`/`aws-lc-rs`/C), so it builds and runs on `wasm32-wasip2`;
# `default-features = false` drops the PEM/`aws-lc-rs` machinery we don't use.
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# JWKS-fetch backend for `Verifier::verify_token`. Enable exactly the one that
# matches your build target; none is on by default, so only the dependency you
# pick is compiled in. `verify_with_jwks` needs no backend and always works.
wasip2 = ["dep:wasi"]                      # wasm32-wasip2: wasi:http 0.2
wasip3 = ["dep:wasi-fetch", "dep:wasip3"]  # wasm32-wasip3: wasi:http 0.3
native-http = ["dep:ureq"]                 # native (non-wasm): blocking ureq

# Native HTTP client (non-wasm only), pulled in by the `native-http` feature.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = { version = "3", optional = true }

# wasm fetch backends (wasm only), each pulled in by its feature above.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasi = { version = "0.14", optional = true }
wasi-fetch = { version = "0.2", optional = true }
wasip3 = { version = "0.7", optional = true }

[dev-dependencies]
# The test harness signs sample tokens itself, so it needs raw RSA + SHA-2 and
# base64. These are test-only; the library verifies via `jsonwebtoken`.
rsa = { version = "0.9", features = ["pem"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
